#306 - Fix tabs breakpoint issues on mobile

--- a/sitemedia/scss/components/_tabs.scss
+++ b/sitemedia/scss/components/_tabs.scss
@@ -9,12 +9,12 @@
 .tabs {
     display: flex;
     justify-content: space-between;
-    padding: spacing.$spacing-2xs;
     text-align: center;
     font-size: typography.$text-size-sm;
     margin: 0 auto;
     @include breakpoints.for-tablet-landscape-up {
         font-size: typography.$text-size-md;
+        padding: spacing.$spacing-2xs;
     }
     a {
         text-decoration: none;
@@ -24,6 +24,8 @@
         }
     }
     li {
-        padding: 0 spacing.$spacing-lg;
+        @include breakpoints.for-tablet-landscape-up {
+            padding: 0 spacing.$spacing-lg;
+        }
     }
 }
